DT-1812  Fix ecom product button spacing

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -981,6 +981,10 @@ input[type="search"],
     }
 }
 
+.widget.ecomproduct .ecom-product .btn {
+    margin: 10px 0;
+}
+
 // Tablet
 @media @tablet {
 	.header-container {
